--- a/App.config
+++ b/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="GenshinImpact_WishOnStreamGUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="GenshinImpact_TwitchRedeemWisherGUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,23 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
     <userSettings>
+        <GenshinImpact_WishOnStreamGUI.Properties.Settings>
+            <setting name="path" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="windowSize" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="windowStartLocation" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="windowState" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="updateSettings" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </GenshinImpact_WishOnStreamGUI.Properties.Settings>
         <GenshinImpact_TwitchRedeemWisherGUI.Properties.Settings>
             <setting name="path" serializeAs="String">
                 <value />
